--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
     <properties>
         <java.version>21</java.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <jacoco.plugin.version>0.8.10</jacoco.plugin.version>
+        <coverage>0</coverage>
     </properties>
 
     <dependencies>
@@ -168,6 +170,7 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -181,14 +184,17 @@
                 </configuration>
             </plugin>
 
-            <!--To expose the com.webflux.boilerplate for Jacoco -->
+            <!--To expose the com.webflux.boilerplate for Jacoco and JUNIT 5 Use other Jacoco if JUNIT4 Below -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M5</version>
                 <configuration>
+                    <dependenciesToScan>
+                        <dependency>org.junit.jupiter:junit-jupiter-api</dependency>
+                    </dependenciesToScan>
                     <includes>
-                        <include>com.webflux.boilerplate.**,</include>
+                        <include>**/*Test.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -207,11 +213,10 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.10</version>
+                        <version>${jacoco.plugin.version}</version>
                         <configuration>
                             <excludes>
                                 <exclude>**/MainApplication*.class</exclude>
-                                <exclude>**/com/webflux/boilerplate/*</exclude>
                             </excludes>
                         </configuration>
                         <executions>
@@ -224,7 +229,10 @@
                             </execution>
                             <!-- Threshold -->
 
-                            <!--mvn clean install -Pcodecoverage-->
+                            <!--
+                            for JUNIT 4 use this: mvn clean install -Pcodecoverage
+                            for JUNIT 5 use this: mvn clean verify site
+                            -->
                             <execution>
                                 <id>coverage-check</id>
                                 <goals>
@@ -238,7 +246,7 @@
                                                 <limit>
                                                     <counter>LINE</counter>
                                                     <value>COVEREDRATIO</value>
-                                                    <minimum>0</minimum>
+                                                    <minimum>${coverage}</minimum>
                                                 </limit>
                                             </limits>
                                         </rule>
@@ -247,6 +255,8 @@
                             </execution>
                         </executions>
                     </plugin>
+
+
                 </plugins>
             </build>
         </profile>
